# rust-lambda-graphql-example

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  cdk.json  docker-compose.yml  package-lock.json  package.json  rustfmt.toml
.github/: renovate.json
.github/workflows/: checks.yml  release.yml
cdk/: .gitignore  cdk.json  cdk.ts  package-lock.json  package.json  tsconfig.json
cdk/lib/: cdk-stack.ts  service.ts
db/: setup.sql
src/: errors.rs  handler.rs  main.rs  schema.rs
